--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,9 @@
-#app{
-	margin: 0px;
-	padding: 0px;
-	height: 100%;
-}
+@import './base.css';
+
+
 .wrapper {
 	height: 100%;
-	padding: 0px 1rem;
-	/* border: 1px solid red; */
+	padding: 1rem;
   }
   body {
 	height: var(--tg-viewport-stable-height);
@@ -26,13 +23,12 @@
   
   .title {
 	font-family: Inter;
-	font-size: 32px;
+	font-size: 25px;
 	font-style: normal;
 	font-weight: 600;
 	line-height: 130%;
-	margin-top: 1rem;
 	margin-bottom: 20px;
-	max-width: 280px;
+	/* max-width: 280px; */
   }
   .hint {
 	font-family: Inter;
@@ -160,7 +156,172 @@
 	pointer-events: none;
 	z-index: -1;
   }
-  
+
   .link {
 	color: var(--tg-theme-link-color);
+  }
+
+
+
+/* ==================================================== */
+select,
+  .select {
+	display: block;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 12px 20px;
+	margin: 15px 0px;
+	border: 1px solid var(--tg-theme-link-color, #000);
+	background-color: var(--tg-theme-bg-color, #ffffff);
+	border-radius: 4px;
+	color: var(--tg-theme-text-color, #222222);
+	text-align: start;
+	font-family: Inter;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 130%;
+  }
+  
+  select::-webkit-input-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  select::-moz-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  select:-ms-input-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  .select {
+	position: relative;
+  }
+  
+  .select:empty:before {
+	position: absolute;
+	left: 0;
+	right: 0;
+	content: attr(data-placeholder);
+	color: var(--tg-theme-hint-color, #ccc);
+	padding: 0 20px;
+	font-weight: normal;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	pointer-events: none;
+	z-index: -1;
+  }
+
+  /* ============================================================= */
+
+  textarea,
+  .textarea {
+	display: block;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 12px 20px;
+	margin: 15px 0px;
+	border: 1px solid var(--tg-theme-link-color, #000);
+	background-color: var(--tg-theme-bg-color, #ffffff);
+	border-radius: 4px;
+	color: var(--tg-theme-text-color, #222222);
+	text-align: start;
+	font-family: Inter;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 130%;
+  }
+  
+  textarea::-webkit-input-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  textarea::-moz-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  textarea:-ms-input-placeholder {
+	color: var(--tg-theme-hint-color, #ccc);
+  }
+  
+  .textarea {
+	position: relative;
+  }
+  
+  .textarea:empty:before {
+	position: absolute;
+	left: 0;
+	right: 0;
+	content: attr(data-placeholder);
+	color: var(--tg-theme-hint-color, #ccc);
+	padding: 0 20px;
+	font-weight: normal;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	pointer-events: none;
+	z-index: -1;
+  }  
+ 
+
+/* switch Style */
+.hometitle, .drivertitle {
+	font-size: 15px;
+  }
+  .switch-holder {
+	cursor: pointer;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+  }
+  
+  /* Visually hide the checkbox input from the DOM, we only need it semantically */
+  .switch-holder_input {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+  }
+  /* color background */
+  .switch {
+	--switch-container-width: 50px;
+	--switch-size: calc(var(--switch-container-width) / 2);
+	display: flex;
+	align-items: center;
+	position: relative;
+	height: var(--switch-size);
+	flex-basis: var(--switch-container-width);
+	border-radius: var(--switch-size);
+	background-color: #999;
+	transition: background-color 0.25s ease-in-out;
+  }
+  /* circle inside the switch */
+  .switch::before {
+	content: "";
+	position: absolute;
+	left: 2px;
+	height: calc(var(--switch-size) - 4px);
+	width: calc(var(--switch-size) - 4px);
+	border-radius: 9999px;
+	background-color: white;
+	transition: transform 0.375s ease-in-out;
+  }
+  /* style for ON state */
+  .switch-holder_input:checked + .switch {
+	background-color: #248dde;
+  }
+  .switch-holder_input:checked + .switch::before {
+	border-color: #248dde;
+	transform: translateX(
+	  calc(var(--switch-container-width) - var(--switch-size))
+	);
   }
