--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,9 @@
 @import './base.css';
-
+#app{
+	border: 1px solid red;
+}
 
 .wrapper {
-	border: 1px solid red;
 	height: 100%;
 	padding: 1rem;
   }
